<resources>
    <string name="app_name">Parstegram</string>
    <string name="logout">Logout</string>
    <string name="alert_me_of_ice_activity_in">Alert me of ICE activity in:</string>
    <string name="the_bronx">The Bronx</string>
    <string name="brooklyn">Brooklyn</string>
    <string name="manhattan">Manhattan</string>
    <string name="queens">Queens</string>
    <string name="staten_island">Staten Island</string>
    <string name="english">English</string>
    <string name="espanol">Español</string>
    <string name="language">Language</string>
    <string name="login_background_screen">login background screen</string>

    <color name="icy">#ACDFF7</color>
</resources>
