<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="144dp"
        android:layout_height="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/button_bg_transparent"
        android:text="@string/logout" />

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="80dp"
        android:text= "@string/language" />

    <TextView
        android:id="@+id/alertMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="200dp"
        android:text="@string/alert_me_of_ice_activity_in" />

    <CheckBox
        android:id="@+id/bronxCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="235dp"
        android:text="@string/the_bronx" />

    <CheckBox
        android:id="@+id/brooklynCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="275dp"
        android:text="@string/brooklyn" />

    <CheckBox
        android:id="@+id/manhattanCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="315dp"
        android:text="@string/manhattan" />

    <CheckBox
        android:id="@+id/queensCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="355dp"
        android:text="@string/queens" />


    <CheckBox
        android:id="@+id/statenCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="395dp"
        android:text="@string/staten_island" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical">


        <RadioButton android:id="@+id/englishRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"/>

        <RadioButton android:id="@+id/espanolRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/espanol"/>


    </RadioGroup>



</RelativeLayout>